# RoboDuet

./: .gitignore  LICENSE  README.md  remote_pub.py  requirements.txt  setup.py
collision_net/: auto_verifier.py  common.py  eval_model.py  pca_analysis.py  sample_env.py  save_distribution.py  test_distribution.py  vqvae.py
evaluation/: README.md  eval.sh  ik_reachability_unvisualized.py  quat_error_compute.py  read_npy.py  sample_points.py  space_visualization.py  test_tracking.py  test_tracking_error.py  test_tracking_sample_error.py  test_workspace.py
go1_gym/envs/automatic/: __init__.py  legged_robot.py  legged_robot_config.py
go1_gym/envs/base/: base_task.py  legged_robot.py  (+1 more)
go1_gym/utils/: __init__.py  common.py  global_switch.py  terrain.py
go1_gym_deploy/: README.md
go1_gym_deploy/docker/: Makefile
go1_gym_deploy/envs/: arm_ac.py  dog_ac.py  history_wrapper.py  lcm_agent.py
go1_gym_deploy/lcm_types/: april_message_lcmt.hpp  april_message_lcmt.lcm  april_message_lcmt.py  arm_actions_t.py  leg_control_data_lcmt.hpp  leg_control_data_lcmt.lcm  leg_control_data_lcmt.py  pd_tau_targets_lcmt.hpp  pd_tau_targets_lcmt.lcm  pd_tau_targets_lcmt.py  rc_command_lcmt.py  state_estimator_lcmt.py
go1_gym_deploy/scripts/: apriltag_rs.py  deploy_policy.py  deploy_policy_ck.py  deploy_policy_vision.py  pure_home.py  send_to_unitree.sh  test_vel.py
go1_gym_deploy/unitree_legged_sdk_bin/: CMakeLists.txt  arx_can copy.rules  arx_can.rules  can_headless.sh  lcm_position  lcm_position.cpp  lcm_position_arm  lcm_position_arm.cpp  make.sh  reopen.sh  setup_can.sh  setup_rule.sh
go1_gym_deploy/unitree_legged_sdk_bin/arx/include/App/: arm_control.h  arx_s.h
go1_gym_deploy/unitree_legged_sdk_bin/arx/include/Hardware/: can.h
go1_gym_deploy/unitree_legged_sdk_bin/arx/src/: utility.cpp
go1_gym_deploy/unitree_legged_sdk_bin/arx/src/App/: arm_control.cpp
go1_gym_deploy/unitree_legged_sdk_bin/arx/src/Hardware/: math_ops.cpp  motor.cpp
go1_gym_deploy/unitree_legged_sdk_bin/include/unitree_legged_sdk/: a1_const.h  aliengo_const.h  comm.h  go1_const.h  joystick.h  loop.h  quadruped.h  safety.h  udp.h  unitree_legged_sdk.h
go1_gym_deploy/utils/: cheetah_state_estimator.py  cheetah_state_estimator_vision.py  command_profile.py  deployment_runner.py
go1_gym_learn/ppo_cse_arm/: __init__.py  ppo.py
go1_gym_learn/ppo_cse_automatic/: __init__.py  arm_ac.py  dog_ac.py  metrics_caches.py  ppo.py  rollout_storage.py
go1_gym_learn/ppo_cse_hybrid/: __init__.py  arm_ac.py  distributions.py  plan_model.py  ppo.py  rollout_storage.py
go1_gym_learn/ppo_cse_unified/: __init__.py  ppo.py  rollout_storage.py  unified2head_ac.py
scripts/: ablation.sh  april_utils.py  auto_ablation.sh  auto_train.py  auto_train_planner.py  char_test.py  load_policy.py  mkdir_ckpt.sh  new_screen.sh  play.py  play_apriltag.py  play_by_key.py  play_by_key_jit.py  play_by_remote.py  play_ori.py  pretrain_dog.py  reorientation.py  stable_chicken.py  standing_curve.py  test_sample_method.py  train.py  train_hybrid.py  train_hybrid_arm.py  unified_train.py
scripts/vr_play/: play_by_remote.py  remote_pub.py  vr_streaming.py
(+25 files in other folders)
